Do not remove table prefix when it is needed

BUG:332329